<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_collect"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_collection" />

        <item
            android:id="@+id/navigation_balance"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_balance" />

        <item
            android:id="@+id/navigation_transaction"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_transaction" />
        <item
            android:id="@+id/navigation_synchronization"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_synchronization" />
        <item
            android:id="@+id/navigation_support"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_support" />
        <item
            android:id="@+id/navigation_cooperation"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_cooperation" />
    </group>

</menu>
