<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_page"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/colorAccent">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home_page"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tab_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_article"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tab_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_game"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tab_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_video"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tab_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evaluation"/>

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>